test/fail/issue-5336a.mo
//MOC-FLAG --default-persistent-actors
import Actor "issue-5336a/actor";

persistent actor class Main() {};
